fix: gen-core-knowledge command

--- a/doc/adr-001.md
+++ b/doc/adr-001.md
@@ -73,10 +73,8 @@ contexts:
   - transformer
 ---
 
-# クエリ (Query)
-
 <Context name="db">
-## データベースクエリ
+## クエリ
 
 データベースにおけるクエリは、データベース管理システム（DBMS）に対する
 構造化された要求です。主にSQL（Structured Query Language）を使用します。
@@ -88,7 +86,7 @@ SELECT name, email FROM users WHERE age > 18;
 </Context>
 
 <Context name="transformer">
-## Transformerのクエリ
+## クエリ
 
 機械学習のTransformerアーキテクチャにおいて、クエリ（Q）は
 Self-Attentionメカニズムの重要な要素です。
